avoid NPE if a variable doesnt have a name whilst generating string